[tool.poetry]
name = "inception-cli"
version = "0.1.0-dev"
description = "INCEpTION command line tool"
authors = ["The INCEpTION Project"]
license = "Apache License 2.0"
packages = [
    { include = "inception" },
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.2"
pytest-mock = "*"
requests-mock = "*"
flake8 = "*"
black = { version = "*", allows-prereleases = true }
coverage = "*"
mkdocs = "^1.0"
pytest-cov = "^3.0"
codecov = "^2.1"
bump2version = "^0.5.11"
click = "8.1.7"

[tool.poetry.group.dev.dependencies]
Jinja2 = "^3.1.3"

[tool.black]
line-length = 120
target_version = ['py38']

[tool.poetry.plugins."console_scripts"]
inception = "inception.cli:cli"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
